--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html>
     <head>
         <title>Hallo</title>
+        <link href="styles.css" rel="stylesheet">
     </head>
     <body>
-        <h1>Hallo</h1>
+        <h1 id="name">Hallo</h1>
         <button onclick="alert('green')">green</button>
+    
+        <script src="script.js"></script>
     </body>
 </html>
